--- a/report.Rmd
+++ b/report.Rmd
@@ -1,19 +1,9 @@
----
-title: Practical Machine Learning Project - Quantified Nike Fuel Band Data Analysis
-  Report
-author: "by Fabiano Borsato"
-output:
-  html_document:
-    fig_height: 9
-    fig_width: 9
----
-
 ## Introduction  
-Using devices such as Jawbone Up, Nike FuelBand, and Fitbit it is now possible to collect a large amount of data about personal activity relatively inexpensively. These type of devices are part of the quantified self movement – a group of enthusiasts who take measurements about themselves regularly to improve their health, to find patterns in their behavior, or because they are tech geeks. One thing that people regularly do is quantify how much of a particular activity they do, but they rarely quantify how well they do it.  
+Utilizing gadgets, for example, Jawbone Up, Nike FuelBand, and Fitbit it is currently conceivable to gather a lot of information about individual movement generally economically. These sort of gadgets are a piece of the evaluated self development – a gathering of devotees who take estimations about themselves consistently to enhance their wellbeing, to discover examples in their conduct, or on the grounds that they are tech nerds. One thing that individuals consistently do is measure how quite a bit of a specific movement they do, yet they infrequently evaluate how well they do it.  
 
-In this project, we will use data from accelerometers on the belt, forearm, arm, and dumbell of 6 participants to predict the manner in which they did the exercise.  
+In this task, we will utilize information from accelerometers on the belt, lower arm, arm, and dumbell of 6 members to foresee the way in which they did the activity.  
 
-## Data Preprocessing  
+## Information Preprocessing  
 ```{r, cache = T}
 library(caret)
 library(rpart)
@@ -38,26 +28,26 @@ if (!file.exists(testFile)) {
 }
 ```  
 ### Read the Data
-After downloading the data from the data source, we can read the two csv files into two data frames.  
+In the wake of downloading the information from the information source, we can read the two csv records into two information outlines.  
 ```{r, cache = T}
 trainRaw <- read.csv("./data/pml-training.csv")
 testRaw <- read.csv("./data/pml-testing.csv")
 dim(trainRaw)
 dim(testRaw)
 ```
-The training data set contains 19622 observations and 160 variables, while the testing data set contains 20 observations and 160 variables. The "classe" variable in the training set is the outcome to predict. 
+The preparation information set contains 19622 perceptions and 160 variables, while the testing information set contains 20 perceptions and 160 variables. The "classe" variable in the preparation set is the result to foresee. 
 
 ### Clean the data
-In this step, we will clean the data and get rid of observations with missing values as well as some meaningless variables.
+In this step, we will clean the information and dispose of perceptions with missing values and in addition some unimportant variables.
 ```{r, cache = T}
 sum(complete.cases(trainRaw))
 ```
-First, we remove columns that contain NA missing values.
+First and foremost, we uproot sections that contain NA missing qualities.
 ```{r, cache = T}
 trainRaw <- trainRaw[, colSums(is.na(trainRaw)) == 0] 
 testRaw <- testRaw[, colSums(is.na(testRaw)) == 0] 
 ```  
-Next, we get rid of some columns that do not contribute much to the accelerometer measurements.
+Next, we dispose of a few sections that don't contribute much to the accelerometer estimations.
 ```{r, cache = T}
 classe <- trainRaw$classe
 trainRemove <- grepl("^X|timestamp|window", names(trainRaw))
@@ -68,10 +58,10 @@ testRemove <- grepl("^X|timestamp|window", names(testRaw))
 testRaw <- testRaw[, !testRemove]
 testCleaned <- testRaw[, sapply(testRaw, is.numeric)]
 ```
-Now, the cleaned training data set contains 19622 observations and 53 variables, while the testing data set contains 20 observations and 53 variables. The "classe" variable is still in the cleaned training set.
+Presently, the cleaned preparing information set contains 19622 perceptions and 53 variables, while the testing information set contains 20 perceptions and 53 variables. The "classe" variable is still in the cleaned preparing set.
 
 ### Slice the data
-Then, we can split the cleaned training set into a pure training data set (70%) and a validation data set (30%). We will use the validation data set to conduct cross validation in future steps.  
+At that point, we can part the cleaned preparing set into an unadulterated preparing information set (70%) and an acceptance information set (30%). We will utilize the acceptance information set to lead cross approval in future steps.  
 ```{r, cache = T}
 set.seed(22519) # For reproducibile purpose
 inTrain <- createDataPartition(trainCleaned$classe, p=0.70, list=F)
@@ -80,13 +70,13 @@ testData <- trainCleaned[-inTrain, ]
 ```
 
 ## Data Modeling
-We fit a predictive model for activity recognition using **Random Forest** algorithm because it automatically selects important variables and is robust to correlated covariates & outliers in general. We will use **5-fold cross validation** when applying the algorithm.  
+We fit a prescient model for movement acknowledgment utilizing **Random Forest** calculation in light of the fact that it consequently chooses critical variables and is vigorous to corresponded covariates & exceptions when all is said in done. We will utilize **5-fold cross validation** when applying the calculation.  
 ```{r, cache = T}
 controlRf <- trainControl(method="cv", 5)
 modelRf <- train(classe ~ ., data=trainData, method="rf", trControl=controlRf, ntree=250)
 modelRf
 ```
-Then, we estimate the performance of the model on the validation data set.  
+At that point, we appraise the execution of the model on the acceptance information set.
 ```{r, cache = T}
 predictRf <- predict(modelRf, testData)
 confusionMatrix(testData$classe, predictRf)
@@ -97,10 +87,10 @@ accuracy
 oose <- 1 - as.numeric(confusionMatrix(testData$classe, predictRf)$overall[1])
 oose
 ```
-So, the estimated accuracy of the model is 99.42% and the estimated out-of-sample error is 0.58%.
+In this way, the evaluated exactness of the model is 99.42% and the assessed out-of-test mistake is 0.58%.
 
 ## Predicting for Test Data Set
-Now, we apply the model to the original testing data set downloaded from the data source. We remove the `problem_id` column first.  
+Presently, we apply the model to the first testing information set downloaded from the information source. We evacuate the `problem_id` section first.
 ```{r, cache = T}
 result <- predict(modelRf, testCleaned[, -length(names(testCleaned))])
 result
